# aoc_2023

./: .bazelrc  .gitignore  WORKSPACE
inputs/: BUILD.bazel
solutions/: BUILD.bazel  day_01.cc  day_02.cc  solution.h  status_macros.h
